examples/test/testpolicy18677.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18677
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key33: value32
      key18: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value39
          key24: value16
      podSelector:
        matchLabels:
          key6: value26
